--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -5,7 +5,7 @@
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
     <div class="col">
       <div class="card h-100">
-        <div class="card-body">
+        <div class="card-body opacity">
           <h2 class="card-title">Action Movies</h2>
           <a href="/bookings/" class="btn btn-primary">Booking</a>
           <p class="card-text">
@@ -22,7 +22,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <div class="card-body">
+        <div class="card-body opacity">
           <h2 class="card-title">Comedy Movies</h2>
           <a href="/bookings/" class="btn btn-primary">Booking</a>
           <p class="card-text">
@@ -39,7 +39,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <div class="card-body">
+        <div class="card-body opacity">
           <h2 class="card-title">Drama Movies</h2>
           <a href="/bookings/" class="btn btn-primary">Booking</a>
           <p class="card-text">
@@ -55,7 +55,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <div class="card-body">
+        <div class="card-body opacity">
           <h2 class="card-title">Video Games</h2>
           <a href="/bookings/" class="btn btn-primary">Booking</a>
           <p class="card-text">
