--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/bxe9zwphve7bhbthbmd3"
                                             class="d-block w-100" alt="Action Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2>Action Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Action Movies<br><a href='/bookings/'>Booking</a>
                                             </h2>
                                         </div>
                                     </div>
@@ -43,7 +43,7 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/qnoheuaaeqkdcil39tg6"
                                             class="d-block w-100" alt="Comedy Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2>Comedy Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Comedy Movies<br><a href='/bookings/'>Booking</a>
                                             </h2>
                                         </div>
                                     </div>
@@ -51,14 +51,14 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/ru5blqivecelik64s3lv"
                                             class="d-block w-100" alt="Drama Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2>Drama Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Drama Movies<br><a href='/bookings/'>Booking</a>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/b4qhuuzy1tj0nh094i7f"
                                             class="d-block w-100" alt="Video Games">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2>Video Games<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Video Games<br><a href='/bookings/'>Booking</a>
                                         </div>
                                     </div>
                                 </div>
@@ -74,7 +74,7 @@
                                 </button>
                             </div>
 
-                            <p class="card-text h6 border border-dark border-3">The Fancy Cinema Castle is
+                            <p class="card-text h6 border border-dark border-3 opacity">The Fancy Cinema Castle is
                                 different from other cinemas.<br>
                                 Here you will book a whole auditorium for 2 to 20 people, where you can
                                 watch movies or
